--- a/Tareas/UI Example JavaFx/.project
+++ b/Tareas/UI Example JavaFx/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TE I – Java 101 Basic UI Example</name>
+	<name>UI Example JavaFx</name>
 	<comment></comment>
 	<projects>
 	</projects>
